--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <body>
         <header></header>
         <main>
+            <div class="container">
+                <div class="content">
+                    <form class="form-container">
 
+                    </form>
+                </div>
+                <div class="background-picture"></div>
+            </div>
         </main>
         <footer></footer>
     </body>
