--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
             <div class="container">
                 <div class="content">
                     <form class="form-container">
+                        <h1>Welcome back!</h1>
+                        <p>Enter your Credentials to access your account</p>
+
+                        <label class="labels" for="email">Email address</label><br>
+                        <input type="email" name="email" id="email" placeholder="Enter your email" required><br>
+                        
+                        <label class="labels" for="password">Password</label>
+                        <a class="forgot-password" href="">forgot password</a>
+                        <input type="password" name="password" id="password" placeholder="Name" minlength="8" required><br>
+                        <span class="password-message"></span>
+
+                        <div class="remember-checkbox">
+                            <input type="checkbox" name="remember" id="remember">
+                            <label for="remember">Remember for 30 days</label>
+                        </div>
 
                     </form>
                 </div>
