Add: form btns part

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                             <label for="remember">Remember for 30 days</label>
                         </div>
 
+                        <button class="login-btn">Login</button><br>
+                        <span class="or">Or</span><br>
+                        
+                        <div class="btns-container">
+                            <button type="button" class="google-btn btns">Sign in with Google</button>
+                            <button type="button" class="apple-btn btns">Sign in with Apple</button>
+                        </div>
+                        <p class="no-account">Don't have an account? <a href="">Sign Up</a></p>
                     </form>
                 </div>
                 <div class="background-picture"></div>
